// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentButton desktop className 1`] = `
<button
  className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled Test"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  Оплатить
</button>
`;

exports[`PaymentButton desktop isYLogo BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton desktop isYLogo FamilyCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FamilyCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton desktop isYLogo NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton desktop methodType ApplePay 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_ApplePay"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_apple-pay YpcIcon_inversed YpcPaymentButton-ApplePayLogo"
  />
</button>
`;

exports[`PaymentButton desktop methodType BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплата
</button>
`;

exports[`PaymentButton desktop methodType FasterPaymentsSystem 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FasterPaymentsSystem"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплатить
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_faster-payments-system YpcIcon_fulled YpcIcon_inversed YpcPaymentButton-FasterPaymentsSystemLogo"
  />
</button>
`;

exports[`PaymentButton desktop methodType GooglePay 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_GooglePay"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_google-pay YpcIcon_inversed YpcPaymentButton-GooglePayLogo"
  />
</button>
`;

exports[`PaymentButton desktop methodType NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплатить
</button>
`;

exports[`PaymentButton desktop totalPrice BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;

exports[`PaymentButton desktop totalPrice FamilyCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FamilyCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;

exports[`PaymentButton desktop totalPrice NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;

exports[`PaymentButton touch-phone className 1`] = `
<button
  className="YpcButton YpcButton_disabled YpcPaymentButton YpcPaymentButton_disabled Test"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  Оплатить
</button>
`;

exports[`PaymentButton touch-phone isYLogo BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton touch-phone isYLogo FamilyCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FamilyCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton touch-phone isYLogo NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  >
    <i
      aria-hidden={true}
      className="YpcIcon YpcIcon_lang_ru YpcIcon_name_y-logo YpcIcon_width_s YpcIcon_height_s"
    />
  </span>
  Оплатить
  <span
    className="YpcPaymentButton-After"
  />
</button>
`;

exports[`PaymentButton touch-phone methodType ApplePay 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_ApplePay"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_apple-pay YpcIcon_inversed YpcPaymentButton-ApplePayLogo"
  />
</button>
`;

exports[`PaymentButton touch-phone methodType BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплата
</button>
`;

exports[`PaymentButton touch-phone methodType FasterPaymentsSystem 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FasterPaymentsSystem"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплатить
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_faster-payments-system YpcIcon_fulled YpcIcon_inversed YpcPaymentButton-FasterPaymentsSystemLogo"
  />
</button>
`;

exports[`PaymentButton touch-phone methodType GooglePay 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_GooglePay"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_lang_ru YpcIcon_name_google-pay YpcIcon_inversed YpcPaymentButton-GooglePayLogo"
  />
</button>
`;

exports[`PaymentButton touch-phone methodType NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Оплатить
</button>
`;

exports[`PaymentButton touch-phone totalPrice BankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_BankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;

exports[`PaymentButton touch-phone totalPrice FamilyCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_FamilyCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;

exports[`PaymentButton touch-phone totalPrice NewBankCard 1`] = `
<button
  className="YpcButton YpcPaymentButton YpcPaymentButton_type_NewBankCard"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  <span
    className="YpcPaymentButton-Before"
  />
  Оплатить
  <span
    className="YpcPaymentButton-After"
  >
    1 000 ₽
  </span>
</button>
`;
